# python-tesseract

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt
examples/: README.md  advanced_usage.py  basic_usage.py  pdf_conversion.py
src/: __init__.py
src/parsers/: __init__.py  ocr_parser.py  ocr_pipeline.py
src/services/: __init__.py  pdf_service.py
tests/: README.md  conftest.py
tests/parsers/: __init__.py  test_ocr_parser.py  test_ocr_parser_unit.py  test_ocr_pipeline.py  test_ocr_pipeline_unit.py
tests/services/: __init__.py  test_pdf_service.py  test_pdf_service_unit.py
