[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-tesseract-ocr"
version = "1.0.0"
description = "A production-ready, modular OCR system for extracting text from PDFs and images using Tesseract OCR"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Steven Aubertin", email = "stevenaubertin@users.noreply.github.com"}
]
keywords = ["ocr", "tesseract", "pdf", "image", "text-extraction", "document-processing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
]

dependencies = [
    "pytesseract>=0.3.10",
    "Pillow>=10.1.0",
    "pdf2image>=1.16.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
]

[project.urls]
Homepage = "https://github.com/stevenaubertin/python-tesseract"
Repository = "https://github.com/stevenaubertin/python-tesseract"
Issues = "https://github.com/stevenaubertin/python-tesseract/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["py.typed"]
